--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
         </nav>
     <section id="about" class="container-fluid">
     <div class="col-xs-8 col-md-4 profile-picture">
-          <img src="images/benaouali.jpg" alt="Mokhtaria" class="img-circle">   
+          <img src="benaouali.jpg" alt="Mokhtaria" class="img-circle">   
     </div>
     <div class="heading">
         <h1>Hello, c'est moi Mokhtaria </h1>
         <h2>Etudiante master2 Informatique</h2>
-        <a href="docs/cv_or_benaouali.pdf" class="button1">Télécharger CV</a>
+        <a href="cv_or_benaouali.pdf" class="button1">Télécharger CV</a>
     </div>
     </section>
    <section id="skills">
