--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                   <p class="text-muted"><small class="glyphicon glyphicon-time"> 02/2019-07/2019</small></p>
                                 </div>
                                  <div class="timeline-body ">
-                                <p>Développement d'une application mokhtaroa web sous shiny pour le suivi de l'activité hospitalière quotidienne.</p>
+                                <p>Développement d'une application web sous shiny pour le suivi de l'activité hospitalière quotidienne.</p>
                                 </div>
                               </div>
                           </div>
