--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <img src="benaouali.jpg" alt="Mokhtaria" class="img-circle">   
     </div>
     <div class="heading">
-        <h1>Hello, c'est moi Mokhtaria </h1>
+        <h1>Hello, c'est moi Mokhtaria  benrr</h1>
         <h2>Etudiante master2 Informatique</h2>
         <a href="cv_or_benaouali.pdf" class="button1">Télécharger CV</a>
     </div>
