--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="heading">
         <h1>Hello, c'est moi Mokhtaria  benrr</h1>
         <h2>Etudiante master2 Informatique</h2>
-        <a href="cv_or_benaouali.pdf" class="button1">Télécharger CV</a>
+        <a href="CV_ed_Mokhataria_Benaouali.pdf" class="button1">Télécharger CV</a>
     </div>
     </section>
    <section id="skills">
